<resources>
    <string name="app_name">DictionaryApp</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search">Search</string>
    <string name="search_hint">New word</string>
    <string name="delete_description">X</string>
    <string name="using_coroutines_example">Примеры с корутинами</string>
    <string name="three_sec_text">Работа 3 сек</string>
    <string name="stopwatch_text">Старт секундомер</string>
    <string name="world_button_text">Рассчитать вселенную</string>
    <string name="coroutines_example">Примеры работы с корутинами</string>
    <string name="stop_text">Стоп секундомер</string>
    <string name="calculate_text">Рассчитать</string>

    <string name="error_stub">Error</string>
    <string name="image_stub">image</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_title_stub">Undefined error</string>
    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check
        internet connection.
    </string>
    <string name="dialog_tittle_sorry">Sorry</string>
    <string name="menu_title_history">History</string>
</resources>